--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 alembic==1.0.0
+aniso8601==8.1.1
+appdirs==1.4.4
+bcrypt==3.2.0
+cffi==1.14.5
 click==6.7
+dataclasses==0.8
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-JWT-Extended==4.0.2
+flask-marshmallow==0.14.0
 Flask-Migrate==2.2.1
+Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 gunicorn==19.9.0
@@ -9,10 +18,22 @@ itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.1.1
+marshmallow==3.10.0
+marshmallow-sqlalchemy==0.24.1
+mypy-extensions==0.4.3
 mysqlclient==2.0.1
+pathspec==0.8.1
 psycopg2-binary==2.7.5
+pycparser==2.20
+PyJWT==2.0.1
 python-dateutil==2.7.3
+python-dotenv==0.15.0
 python-editor==1.0.3
+pytz==2021.1
+regex==2020.11.13
 six==1.11.0
 SQLAlchemy==1.2.11
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
 Werkzeug==0.14.1
