--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ appdirs==1.4.4
 bcrypt==3.2.0
 cffi==1.14.5
 click==6.7
-dataclasses==0.8
+dataclasses
 Flask==1.0.2
 Flask-Bcrypt==0.7.1
 Flask-JWT-Extended==4.0.2
